novo menu e fundo das secoes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 	<header>
 		<div class="cabecalho-geral">
 			<div class="cabecalho">
-				<button class="c_botaomenu" aria-label="Menu"><i class="fa-solid fa-bars iconburger"></i></button>
+				<button class="c_botaomenu" aria-label="Menu">
+					<i class="fa-solid fa-bars iconburger"></i>
+				</button>
 				<h1 class="titulo-principal">MyCoffee</h1>
 				<div class="c-logo">
 					<i class="fa-sharp fa-solid fa-mug-hot iconlogo"></i>
@@ -42,6 +44,7 @@
 					<a href="#" class="menulink menulink-home menulink-ativo"><i class="fa-solid fa-house iconmenu"></i>Home</a>
 					<a href="#" class="menulink menulink-produtos"><i class="fa-solid fa-basket-shopping iconmenu"></i>Produtos</a>
 					<a href="#" class="menulink menulink-locais"><i class="fa-solid fa-store iconmenu"></i>Locais</a>
+					<a href="#" class="menulink menulink-contato"><i class="fa-solid fa-phone iconmenu"></i>Contato</a>
 				</nav>
 			</div>
 		</div>
@@ -49,15 +52,29 @@
 	<main>
 
 		<section class="s-home" id="secao-home">
-			<div>
-				<div>
-					
+			<div class="home">
+				<div class="homemain">
+					<i class="fa-solid fa-mug-hot iconhome"></i>
+					<h2>quem somos nós?</h2>
+					<p>O MyCoffee é um projeto autonomo e diferente, um ponto de encontro para os amantes de café.</p>
+				</div>
+				<div class="homebackground">
+					<div class="homefundo"></div>
+					<div class="secaofundo"></div>
 				</div>
 			</div>
-
 		</section>
 
 		<section class="s-produtos" id="secao-produtos">
+			<div class="produtos">
+				<div class="swiper mySwiper">
+					<div class="swiper-wrapper">
+					  <div class="swiper-slide">
+					  </div>
+					</div>
+					<div class="swiper-pagination"></div>
+				  </div>
+			</div>
 		</section>
 
 		<section class="s-contato" id="secao-contatos">
